# pyslim

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  README.html  README.md  example_magic.ipynb  prek.toml  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: docs.yml  lint.yml  tests.yml  wheels.yml
docs/: .gitignore  A.trees  B.trees  C.trees  I.trees  Makefile  _config.yml  _toc.yml  conf.py  development.md  development.rst  example_sim.slim  generation_time.slim  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  metadata.md  metadata.rst  migrants.slim  neutral_nucleotide_restart.slim  neutral_restart.slim  overview.md  phylo_bgs.slim  previous_versions.md  python_api.md  python_api.rst  rapid_adaptation.slim  reload_annotated.slim  selection.slim  time_units.md  tutorial.md  tutorial.rst  util.py  vignette_coalescent_diversity.md  vignette_coalescent_diversity.rst  vignette_continuing.md  vignette_continuing.rst  vignette_parallel_phylo.md  (+3 more)
docs/_static/: Makefile  export-layers-svg.sh  pedigrees.ink.svg.md5  phylo.tsv  recomb_rates.tsv
pyslim/: __init__.py  _version.py  methods.py  mutate.py  provenance.py  slim_metadata.py  slim_tables.py  slim_tree_sequence.py  spatial.py  util.py  vcf.py
pyslim_magic/: Untitled.ipynb  __init__.py  pyslim_magic.py
requirements/: conda-minimal.txt  rtd.txt
requirements/CI/: conda-requirements.txt  pip-requirements.txt  requirements.txt
requirements/CI-conda/: ci-environment.yml  requirements.txt
requirements/CI-docs/: requirements.txt
requirements/CI-pip/: requirements.txt
tests/: README.md  __init__.py  conftest.py  dont_test_legacy_metadata.py  recipe.slim  recipe_specs.py  test_annotate_msprime.py  test_annotate_sexes.py  test_annotation.py  test_assignment.py  test_legacy_metadata.py  test_metadata.py  test_provenance.py  test_read_slim.py  test_reading.py  test_recaptiation.py  test_spatial.py  test_tree_sequence.py  test_util.py  test_vcf.py  test_writing.py
tests/benchmark/: annotation.sh  metadata.sh  metadata.slim
tests/examples/: make_v3_tests.sh  recipe_WF.slim  recipe_WF.v3.2.trees  recipe_WF.v3.4.trees  recipe_WF_early.slim  recipe_WF_migration.slim  recipe_init_mutated_WF.slim  recipe_init_mutated_nonWF.slim  recipe_long_WF.slim  recipe_long_nonWF.slim  recipe_long_nucleotides.slim  recipe_nonWF.slim  recipe_nonWF.v3.3.1.trees  recipe_nonWF_early.slim  recipe_nonWF_selfing.slim  recipe_nucleotides.slim  recipe_record_everyone.slim  recipe_record_everyone_WF.slim  recipe_record_everyone_WF_early.slim  recipe_record_everyone_WF_late.slim  recipe_record_everyone_nonWF_early.slim  recipe_record_everyone_nonWF_late.slim  recipe_roots.slim  recipe_with_metadata.slim  restart_WF.slim  restart_msprime.slim  restart_nonWF.slim  restart_nucleotides.slim
tests/extra_recipes/: Makefile  Recipe 17.10 - Adding a neutral burn-in after simulation with recapitation II.py  Recipe 17.2 - Overlaying neutral mutations.py  Recipe 17.3 - Simulation conditional upon fixation of a sweep, preserving ancestry I.txt  Recipe 17.3 - Simulation conditional upon fixation of a sweep, preserving ancestry II.txt  Recipe 17.4 - Detecting the dip in diversity (analyzing tree heights in Python) I.txt  Recipe 17.4 - Detecting the dip in diversity (analyzing tree heights in Python) II.py  Recipe 17.5 - Mapping admixture (analyzing ancestry in Python) II.py  Recipe 17.8 - Starting a hermaphroditic WF model with a coalescent history I.py  Recipe 17.9 - Starting a sexual nonWF model with a coalescent history I.py  Recipe 18.13 - Tree-sequence recording and nucleotide-based models II.py  Recipe 18.13 - Tree-sequence recording and nucleotide-based models III.py  check_trees.py
tests/recipes/: Recipe 17.2 - Overlaying neutral mutations.py  Recipe 17.4 - Detecting the "dip in diversity" (analyzing tree heights in Python) I.txt  Recipe 17.4 - Detecting the "dip in diversity" (analyzing tree heights in Python) II.py
tests/test_recipes/: make_v3_test_additions.py  make_v3_tests.sh  recipe_H-_chromosome.slim  recipe_WF.slim  recipe_WF.v3.0.trees  recipe_WF.v3.3.1.trees  recipe_WF.v3.5.trees  recipe_WF.v3.5_and_v3.6.trees  recipe_WF.v3.6.trees  recipe_WF.v3.7.trees  recipe_WF.v4.2.2.trees  recipe_WF_H.slim  recipe_WF_HF.slim  recipe_WF_HM.slim  recipe_WF_W.slim  recipe_WF_X.slim  recipe_WF_X.v4.2.2.trees  recipe_WF_Y.slim  recipe_WF_Y.v4.2.2.trees  recipe_WF_Z.slim  recipe_WF_early.slim  recipe_WF_early_early.slim  recipe_WF_early_first.slim  recipe_WF_early_late.slim  recipe_WF_first_early.slim  recipe_WF_first_first.slim  recipe_WF_first_late.slim  recipe_WF_late_early.slim  recipe_WF_late_first.slim  recipe_WF_late_late.slim  recipe_WF_migration.slim  recipe_all_the_chromosome_types.slim  recipe_chromosomes_adds_muts.slim  recipe_init_mutated_WF.slim  recipe_init_mutated_nonWF.slim  recipe_long_WF.slim  recipe_long_nucleotides.slim  recipe_many_chromosomes.slim  recipe_mutation_spectrum.slim  recipe_nonWF.slim  (+58 more)
